apps/dozzle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dozzle
  namespace: app
spec:
  selector:
    app: dozzle
  ports:
    - port: 80
      targetPort: 8080
