apps/dozzle/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dozzle-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  ingressClassName: nginx
  rules:
    - host: dozzle.akatukii.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dozzle
                port:
                  number: 80
